--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://Mdparvej01.github.io/usefect",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,8 @@
     "axios": "^1.6.7"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
